<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transfer.TransferActivity">

    <!--CUSTOM APP BAR-->
    <TextView
        android:id="@+id/appbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:padding="16dp"
        android:text="@string/transfer"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--TITLE 1-->
    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/enter_transfer_amount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/appbar_title" />

    <!--PREFIX-->
    <TextView
        android:id="@+id/prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rp"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@+id/edt_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_amount" />

    <!--FIELD AMOUNT-->
    <EditText
        android:id="@+id/edt_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="number"
        android:textColor="@color/dark_grey"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prefix"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <!--BUTTON TOPUP-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button_rectangle_filled"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_transfer"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>