<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    tools:context=".ui.registration.RegistrationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!--REGISTRATION LAYOUT-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!--IMAGE COVER-->
            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="36dp"
                android:src="@drawable/register"
                app:layout_constraintTop_toTopOf="parent" />

            <!--SIGN UP TITLE-->
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:text="@string/register_now"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/img_cover" />

            <!--SUBTITLE-->
            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="36dp"
                android:text="To be able to use our e-Wallet features."
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <!--FIRST NAME FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="36dp"
                android:hint="@string/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_user"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--LAST NAME FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="36dp"
                android:hint="@string/last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_user"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edtl_first_name" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EMAIL FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="36dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_email"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edtl_last_name" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--PASSWORD FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="18dp"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:counterEnabled="true"
                app:helperText="*Should contain at least 6 char"
                app:startIconDrawable="@drawable/ic_password"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edtl_email" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--REGISTER BUTTON-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/bg_button_rectangle_filled"
                android:backgroundTint="@color/orange"
                android:text="@string/register"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtl_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--LOADING LAYOUT-->
        <include
            layout="@layout/loading_layout"
            android:id="@+id/loading_layout"
            android:visibility="gone" />

    </FrameLayout>

</ScrollView>