<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!--CUSTOM APP BAR-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--MAIN VIEW-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!--IMAGE COVER-->
            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_user"
                app:layout_constraintTop_toTopOf="parent" />

            <!--SUBTITLE-->
            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="All about your personal information. "
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/img_cover" />

            <!--FIRST NAME FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                app:prefixText="First name"
                tools:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="16dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:textAlignment="viewEnd" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--LAST NAME FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/edtl_first_name"
                app:prefixText="Last name"
                tools:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="16dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:textAlignment="viewEnd" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EMAIL FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtl_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/edtl_last_name"
                app:prefixText="Email"
                tools:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="16dp"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewEnd" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EDIT PROFILE BUTTON-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="80dp"
                android:background="@drawable/bg_button_rectangle_filled"
                android:backgroundTint="@color/orange"
                android:text="Edit Profile"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtl_email"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

